fix about me section alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -154,6 +154,8 @@ header {
 
 .about-container {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
   background-color: #8DB9C1;
   width: 90%;
@@ -174,6 +176,7 @@ main {
   flex-direction: column;
   align-items: center;
   margin: 2rem 0;
+  border-bottom: solid 3px #EBEBEB;
 }
 
 .main__p {
@@ -181,7 +184,7 @@ main {
   padding: 1rem;
 }
 
-.resume-container {
+/* .resume-container {
   border-top: solid 3px #EBEBEB;
   margin: 0 74px 0 70px;
   padding: 32px;
@@ -191,7 +194,7 @@ main {
   align-items: center;
   background-color: #8DB9C1;
   letter-spacing: .15rem;
-}
+} */
 
 .resume__h3 {
   font-size: 3rem;
